# droonereplit

./: .breakpoints  .replit  Pipfile  constantes.py  main.py  pyproject.toml  replit.nix  requirements.txt  tensor.replit  test.db
.testes/: README.md  conexao.py  delete.py  envteste.py  feedback.py  images.py  insert_password.py  m_tables.py  mysql_test.py  select_mysql.py  select_tables.py  transfer.py  updatingimages.py
classificador/: train_model.py
classificador/classificadorIA/: model_classificacao_faces.h5
endpoints/: __init__.py  auth_router.py  classificador_router.py  feedback_router.py  gambiarra_simulator.py  robotdog_router.py  whats_router.py
model/: __init__.py  classconection.py  test.py  user.py
send_alerts/: constantes.py  send_api.py  send_with_api.py  sender_mail.py  verify_bd.py
send_alerts/send_web_whats/: bot.py  build.ps1  build.sh  send_web_whats.botproj  send_web_whats.py
services/: alerts.py  connection.py  utils.py
services/classificador/: classifier_alert_report.py
services/feedback/: blob.py  cams_db.py  constantes.py  feedback.py  recept_mail.py  uteis_mail.py
services/site/: auth_db.py
static/: index.html
testes/: .gitignore  conexao.py  insert_password.py  m_tables.py  mysql_test.py  select_mysql.py  select_tables.py  test.db
