[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
fastapi = "0.111.0"
numpy = "2.0.0"
passlib = "1.7.4"
uvicorn = "^0.30.1"
dlib-bin = "19.24.2.post1"
dlib-binary = "19.24.1"
starlette = "^0.37.2"
pydantic = "^2.8.2"
endpoints = "^6.0.0"
keras = "3.4.1"
numpy1 = "0.0.1"
psutil = "^6.0.0"
pyperclip = "^1.9.0"
sqlalchemy = "^2.0.14"
zsvision = "^0.7.12"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"